--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,9 @@
 url = https://www.saucedemo.com/
-driverPath = C:\Users\makar\OneDrive\??????? ????\QAA\driver\chromedriver.exe
+driverPath = D:\\IntelliJ IDEA Community Edition 2022.3.2\\Code\\TestTask\\QAA\\driver\\chromedriver.exe
 driverPropetry = webdriver.chrome.driver
+currentUrlFor1TC = https://www.saucedemo.com/checkout-complete.html
+currentTextFor1TC = THANK YOU FOR YOUR ORDER
+currentTextFor2TC = Epic sadface: Username and password do not match any user in this service
+
+testUserName = test
+testPassword = test
